Change z-index settings to fix emoji select button displaying over backdrop (#14)

--- a/src/Components/Inputs/ChatInput.css
+++ b/src/Components/Inputs/ChatInput.css
@@ -32,7 +32,6 @@
   #ChatInput #emojis-button {
     font-size: 30px;
     margin-right: 10px;
-    z-index: 110;
     cursor: pointer;
     margin-bottom: 0px;
   }
